--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -952,7 +952,7 @@
      </property>
      <item>
       <property name="text">
-       <string>Alwas</string>
+       <string>Always</string>
       </property>
      </item>
      <item>
@@ -1062,7 +1062,7 @@
      <x>0</x>
      <y>0</y>
      <width>351</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
