--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>351</width>
-    <height>637</height>
+    <width>352</width>
+    <height>663</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -670,7 +670,7 @@
       <x>180</x>
       <y>260</y>
       <width>161</width>
-      <height>161</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -832,7 +832,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>150</y>
        <width>141</width>
        <height>21</height>
       </rect>
@@ -851,12 +851,38 @@
       </rect>
      </property>
     </widget>
+    <widget class="QCheckBox" name="screenshotPrerendering">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>130</y>
+       <width>21</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_23">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>130</y>
+       <width>71</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pre</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_9">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>430</y>
+      <y>450</y>
       <width>211</width>
       <height>81</height>
      </rect>
@@ -971,7 +997,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>520</y>
+      <y>540</y>
       <width>331</width>
       <height>71</height>
      </rect>
@@ -1049,10 +1075,23 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>430</y>
+      <y>460</y>
       <width>61</width>
       <height>31</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="checkBoxDebug">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>510</y>
+      <width>91</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Debug</string>
     </property>
    </widget>
   </widget>
@@ -1061,7 +1100,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>351</width>
+     <width>352</width>
      <height>22</height>
     </rect>
    </property>
@@ -1608,6 +1647,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>checkBoxDebug</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>debug(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>275</x>
+     <y>543</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>175</x>
+     <y>331</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -1646,5 +1701,6 @@
   <slot>past(QString)</slot>
   <slot>future(QString)</slot>
   <slot>updateUi()</slot>
+  <slot>debug(bool)</slot>
  </slots>
 </ui>
