--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -884,7 +884,7 @@
       <x>10</x>
       <y>450</y>
       <width>211</width>
-      <height>81</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -992,12 +992,50 @@
       </property>
      </item>
     </widget>
+    <widget class="QLabel" name="label_24">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>91</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Depthbuffer</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="performanceDepthbuffer">
+     <property name="geometry">
+      <rect>
+       <x>120</x>
+       <y>70</y>
+       <width>86</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <item>
+      <property name="text">
+       <string>16 bit</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>24 bit</string>
+      </property>
+     </item>
+     <item>
+      <property name="text">
+       <string>32 bit</string>
+      </property>
+     </item>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_10">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>540</y>
+      <y>550</y>
       <width>331</width>
       <height>71</height>
      </rect>
@@ -1663,6 +1701,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>performanceDepthbuffer</sender>
+   <signal>currentIndexChanged(QString)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>depthbuffer(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>172</x>
+     <y>552</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>175</x>
+     <y>331</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -1702,5 +1756,6 @@
   <slot>future(QString)</slot>
   <slot>updateUi()</slot>
   <slot>debug(bool)</slot>
+  <slot>depthbuffer(QString)</slot>
  </slots>
 </ui>
