--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>352</width>
-    <height>663</height>
+    <width>463</width>
+    <height>709</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -206,8 +206,8 @@
      <rect>
       <x>10</x>
       <y>100</y>
-      <width>81</width>
-      <height>61</height>
+      <width>121</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -242,14 +242,40 @@
       <string>Show</string>
      </property>
     </widget>
+    <widget class="QLineEdit" name="depthScaleText">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>41</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>1</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_25">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>50</y>
+       <width>51</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Dist</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_3">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>100</y>
-      <width>120</width>
-      <height>61</height>
+      <x>350</x>
+      <y>10</y>
+      <width>101</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -284,14 +310,27 @@
       <string>Show</string>
      </property>
     </widget>
+    <widget class="QCheckBox" name="renderedVisibility">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>91</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Visibility</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_4">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>270</x>
       <y>100</y>
-      <width>111</width>
-      <height>61</height>
+      <width>81</width>
+      <height>81</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -330,8 +369,8 @@
    <widget class="QFrame" name="frame_5">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>170</y>
+      <x>140</x>
+      <y>100</y>
       <width>121</width>
       <height>81</height>
      </rect>
@@ -385,10 +424,10 @@
    <widget class="QFrame" name="frame_6">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>170</y>
+      <x>10</x>
+      <y>190</y>
       <width>201</width>
-      <height>81</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -494,14 +533,27 @@
       </rect>
      </property>
     </widget>
+    <widget class="QCheckBox" name="checkBoxDepthTesting">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>70</y>
+       <width>121</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>DepthTesting</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QFrame" name="frame_7">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>260</y>
+      <y>300</y>
       <width>161</width>
-      <height>161</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -668,7 +720,7 @@
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>260</y>
+      <y>300</y>
       <width>161</width>
       <height>181</height>
      </rect>
@@ -882,7 +934,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>450</y>
+      <y>490</y>
       <width>211</width>
       <height>91</height>
      </rect>
@@ -1035,7 +1087,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>550</y>
+      <y>590</y>
       <width>331</width>
       <height>71</height>
      </rect>
@@ -1113,7 +1165,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>460</y>
+      <y>500</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -1123,7 +1175,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>500</y>
+      <y>540</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -1136,7 +1188,7 @@
     <property name="geometry">
      <rect>
       <x>230</x>
-      <y>520</y>
+      <y>560</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -1145,13 +1197,55 @@
      <string>Approximated</string>
     </property>
    </widget>
+   <widget class="QFrame" name="frame_11">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>100</y>
+      <width>91</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label_26">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>61</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Visibility</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="visibilityShow">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>61</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Show</string>
+     </property>
+    </widget>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>352</width>
+     <width>463</width>
      <height>22</height>
     </rect>
    </property>
@@ -1746,6 +1840,54 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>depthScaleText</sender>
+   <signal>textEdited(QString)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>depthMax(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>40</x>
+     <y>179</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>174</x>
+     <y>353</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>renderedVisibility</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>renderedVisibility(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>195</x>
+     <y>183</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>174</x>
+     <y>353</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxDepthTesting</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>depthTesting(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>290</x>
+     <y>583</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>174</x>
+     <y>353</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -1787,5 +1929,8 @@
   <slot>debug(bool)</slot>
   <slot>depthbuffer(QString)</slot>
   <slot>approximated(bool)</slot>
+  <slot>depthMax(QString)</slot>
+  <slot>renderedVisibility(bool)</slot>
+  <slot>depthTesting(bool)</slot>
  </slots>
 </ui>
