--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -424,10 +424,10 @@
    <widget class="QFrame" name="frame_6">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>190</y>
+      <x>230</x>
+      <y>490</y>
       <width>201</width>
-      <height>101</height>
+      <height>91</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -1164,8 +1164,8 @@
    <widget class="QOpenGLWidget" name="openGLWidget">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>500</y>
+      <x>360</x>
+      <y>410</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -1174,8 +1174,8 @@
    <widget class="QCheckBox" name="checkBoxDebug">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>540</y>
+      <x>350</x>
+      <y>300</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -1187,8 +1187,8 @@
    <widget class="QCheckBox" name="checkBoxApproximated">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>560</y>
+      <x>350</x>
+      <y>320</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -1238,6 +1238,26 @@
       <string>Show</string>
      </property>
     </widget>
+   </widget>
+   <widget class="QTableView" name="cameraTableView">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>190</y>
+      <width>231</width>
+      <height>101</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QTableView" name="meshTableView">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>190</y>
+      <width>201</width>
+      <height>101</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
