--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -1247,7 +1247,7 @@
     <property name="geometry">
      <rect>
       <x>360</x>
-      <y>410</y>
+      <y>440</y>
       <width>61</width>
       <height>31</height>
      </rect>
@@ -1257,7 +1257,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>300</y>
+      <y>390</y>
       <width>91</width>
       <height>23</height>
      </rect>
@@ -1270,7 +1270,7 @@
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>320</y>
+      <y>410</y>
       <width>121</width>
       <height>23</height>
      </rect>
@@ -1340,6 +1340,48 @@
       <height>101</height>
      </rect>
     </property>
+   </widget>
+   <widget class="QFrame" name="frame_12">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>300</y>
+      <width>101</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label_30">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>10</y>
+       <width>67</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Framelists</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="framelistsShow">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>30</y>
+       <width>71</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Show</string>
+     </property>
+    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -2054,6 +2096,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>framelistsShow</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>showFramelists(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>395</x>
+     <y>363</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -2102,5 +2160,6 @@
   <slot>culling(QString)</slot>
   <slot>flowFallback(bool)</slot>
   <slot>flowNormalize(bool)</slot>
+  <slot>showFramelists(bool)</slot>
  </slots>
 </ui>
