--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -453,7 +453,7 @@
       <x>230</x>
       <y>490</y>
       <width>201</width>
-      <height>91</height>
+      <height>121</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -562,14 +562,27 @@
     <widget class="QCheckBox" name="checkBoxDepthTesting">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>70</y>
+       <x>10</x>
+       <y>90</y>
        <width>121</width>
        <height>23</height>
       </rect>
      </property>
      <property name="text">
       <string>DepthTesting</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="checkBoxCrop">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>121</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Crop</string>
      </property>
     </widget>
    </widget>
@@ -2112,6 +2125,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>checkBoxCrop</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>crop(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>300</x>
+     <y>593</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -2161,5 +2190,6 @@
   <slot>flowFallback(bool)</slot>
   <slot>flowNormalize(bool)</slot>
   <slot>showFramelists(bool)</slot>
+  <slot>crop(bool)</slot>
  </slots>
 </ui>
