--- a/ui/control_ui.ui
+++ b/ui/control_ui.ui
@@ -310,44 +310,33 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_5">
+    <widget class="QSplitter" name="splitter_2">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>67</width>
-       <height>17</height>
+       <width>73</width>
+       <height>63</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Rendered</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
-    <widget class="QCheckBox" name="renderedShow">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>61</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="renderedVisibility">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>91</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Visibility</string>
-     </property>
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Rendered</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="renderedShow">
+      <property name="text">
+       <string>Show</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="renderedVisibility">
+      <property name="text">
+       <string>Visibility</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QFrame" name="frame_4">
@@ -365,31 +354,28 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_6">
+    <widget class="QSplitter" name="splitter_3">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>51</width>
-       <height>17</height>
+       <width>57</width>
+       <height>40</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Index</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
-    <widget class="QCheckBox" name="indexShow">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>61</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
+     <widget class="QLabel" name="label_6">
+      <property name="text">
+       <string>Index</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="indexShow">
+      <property name="text">
+       <string>Show</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QFrame" name="frame_5">
@@ -407,44 +393,33 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_7">
+    <widget class="QSplitter" name="splitter">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>67</width>
-       <height>17</height>
+       <width>63</width>
+       <height>63</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Position</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
-    <widget class="QCheckBox" name="positionShow">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>71</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
-    </widget>
-    <widget class="QCheckBox" name="positionShowCurser">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>50</y>
-       <width>71</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Curser</string>
-     </property>
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>Position</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="positionShow">
+      <property name="text">
+       <string>Show</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="positionShowCurser">
+      <property name="text">
+       <string>Curser</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QFrame" name="frame_6">
@@ -1307,31 +1282,28 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_26">
+    <widget class="QSplitter" name="splitter_4">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>61</width>
-       <height>17</height>
+       <width>57</width>
+       <height>40</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Visibility</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
-    <widget class="QCheckBox" name="visibilityShow">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>61</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
+     <widget class="QLabel" name="label_26">
+      <property name="text">
+       <string>Visibility</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="visibilityShow">
+      <property name="text">
+       <string>Show</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QTableView" name="cameraTableView">
@@ -1369,31 +1341,28 @@
     <property name="frameShadow">
      <enum>QFrame::Raised</enum>
     </property>
-    <widget class="QLabel" name="label_30">
+    <widget class="QSplitter" name="splitter_5">
      <property name="geometry">
       <rect>
        <x>10</x>
        <y>10</y>
-       <width>67</width>
-       <height>17</height>
+       <width>58</width>
+       <height>40</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Framelists</string>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
      </property>
-    </widget>
-    <widget class="QCheckBox" name="framelistsShow">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
-       <y>30</y>
-       <width>71</width>
-       <height>23</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Show</string>
-     </property>
+     <widget class="QLabel" name="label_30">
+      <property name="text">
+       <string>Framelists</string>
+      </property>
+     </widget>
+     <widget class="QCheckBox" name="framelistsShow">
+      <property name="text">
+       <string>Show</string>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
@@ -1406,11 +1375,71 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>Fi&amp;le</string>
+    </property>
+    <widget class="QMenu" name="menuImport">
+     <property name="title">
+      <string>Add</string>
+     </property>
+     <addaction name="actionMesh"/>
+     <addaction name="actionAnimation"/>
+     <addaction name="actionFramelist"/>
+     <addaction name="actionCamera"/>
+    </widget>
+    <widget class="QMenu" name="menuExport">
+     <property name="title">
+      <string>Export</string>
+     </property>
+     <addaction name="actionScreenshot"/>
+    </widget>
+    <addaction name="menuImport"/>
+    <addaction name="menuExport"/>
+    <addaction name="actionQuit"/>
+   </widget>
+   <widget class="QMenu" name="menuScripts">
+    <property name="title">
+     <string>Scripts</string>
+    </property>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuScripts"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionTest">
    <property name="text">
     <string>Test</string>
+   </property>
+  </action>
+  <action name="actionMesh">
+   <property name="text">
+    <string>Mesh</string>
+   </property>
+  </action>
+  <action name="actionAnimation">
+   <property name="text">
+    <string>Animation</string>
+   </property>
+  </action>
+  <action name="actionFramelist">
+   <property name="text">
+    <string>Framelist</string>
+   </property>
+  </action>
+  <action name="actionScreenshot">
+   <property name="text">
+    <string>Screenshot</string>
+   </property>
+  </action>
+  <action name="actionQuit">
+   <property name="text">
+    <string>Quit</string>
+   </property>
+  </action>
+  <action name="actionCamera">
+   <property name="text">
+    <string>Camera</string>
    </property>
   </action>
  </widget>
@@ -2189,6 +2218,86 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>actionMesh</sender>
+   <signal>triggered()</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>importMesh()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionQuit</sender>
+   <signal>triggered()</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>quit()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionFramelist</sender>
+   <signal>triggered()</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>importFramelist()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionCamera</sender>
+   <signal>triggered()</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>addCamera()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionAnimation</sender>
+   <signal>triggered()</signal>
+   <receiver>ControlWindow</receiver>
+   <slot>importAnimation()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>234</x>
+     <y>368</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <signal>updateUiSignal(int)</signal>
@@ -2239,5 +2348,10 @@
   <slot>flowNormalize(bool)</slot>
   <slot>showFramelists(bool)</slot>
   <slot>crop(bool)</slot>
+  <slot>importMesh()</slot>
+  <slot>quit()</slot>
+  <slot>importAnimation()</slot>
+  <slot>addCamera()</slot>
+  <slot>importFramelist()</slot>
  </slots>
 </ui>
